--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Utility scripts collection"
 requires-python = ">=3.8"
 dependencies = [
+    "openai>=1.0.0",
     "pyperclip>=1.8.0",
+    "python-dotenv>=1.0.0",
     "pyyaml>=6.0",
 ]
 
